--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
   },
   "homepage": "https://github.com/blakeembrey/popsicle-resolve",
   "devDependencies": {
-    "chai": "^2.1.1",
-    "es6-promise": "^2.0.1",
-    "istanbul": "^0.3.5",
+    "chai": "^3.5.0",
+    "es6-promise": "^3.1.2",
+    "istanbul": "^0.4.2",
     "mocha": "^2.0.1",
-    "popsicle": "^0.5.6",
-    "pre-commit": "^1.0.6",
-    "standard": "^3.0.0-alpha"
+    "popsicle": "^4.0.0",
+    "standard": "^6.0.8"
   }
 }
