--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "es6-promise": "^3.1.2",
     "istanbul": "^0.4.2",
     "mocha": "^2.0.1",
-    "popsicle": "^5.0.1",
+    "nock": "^8.0.0",
+    "popsicle": "^6.0.0",
     "standard": "^7.0.0"
   }
 }
