--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "popsicle-resolve",
   "version": "2.1.0",
   "description": "Resolve all Popsicle HTTP request URLs to a common prefix",
-  "main": "popsicle-resolve.js",
-  "typings": "popsicle-resolve.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "popsicle-resolve.js",
-    "popsicle-resolve.d.ts"
+    "dist/"
   ],
   "scripts": {
-    "lint": "standard",
-    "test-spec": "mocha -R spec --bail",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --bail",
-    "test": "npm run lint && npm run test-cov"
+    "prettier": "prettier --write",
+    "lint": "tslint \"src/**/*.{js,jsx,ts,tsx}\" --project tsconfig.json",
+    "format": "npm run prettier -- \"{.,src/**}/*.{js,jsx,ts,tsx,md,yml,yaml}\"",
+    "build": "rimraf dist && tsc",
+    "specs": "jest --coverage",
+    "test": "npm run -s lint && npm run -s build && npm run -s specs && npm run -s size",
+    "prepare": "npm run build",
+    "size": "size-limit"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/blakeembrey/popsicle-resolve.git"
+    "url": "git://github.com/serviejs/popsicle-resolve.git"
   },
   "keywords": [
     "popsicle",
@@ -30,16 +33,63 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/blakeembrey/popsicle-resolve/issues"
+    "url": "https://github.com/serviejs/popsicle-resolve/issues"
   },
-  "homepage": "https://github.com/blakeembrey/popsicle-resolve",
+  "homepage": "https://github.com/serviejs/popsicle-resolve",
+  "jest": {
+    "roots": [
+      "<rootDir>/src/"
+    ],
+    "transform": {
+      "\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "size-limit": [
+    {
+      "path": "./dist/index.js",
+      "limit": "300 B"
+    }
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md,yml,yaml}": [
+      "npm run prettier",
+      "git add"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "peerDependencies": {
+    "servie": "^4.0.0"
+  },
   "devDependencies": {
-    "chai": "^4.0.0",
-    "es6-promise": "^4.0.0",
-    "istanbul": "^0.4.2",
-    "mocha": "^4.0.0",
-    "nock": "^9.0.0",
-    "popsicle": "^9.1.0",
-    "standard": "^10.0.2"
+    "@size-limit/preset-small-lib": "^2.1.6",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
+    "servie": "^4.3.2",
+    "standard": "^10.0.2",
+    "ts-jest": "^24.1.0",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.7.2"
   }
 }
